+ optional force size for program + program events, that resolves #1

--- a/addons/amxmodx/configs/plugins-canvas.ini
+++ b/addons/amxmodx/configs/plugins-canvas.ini
@@ -3,3 +3,4 @@ canvas.amxx ; Core library
 canvas-init-progressive.amxx ; Basic initializer
 
 canvas-program-gradient.amxx; Gradient renderer
+canvas-program-tetris.amxx; Tetris game
