+ add hover interaction, sample and unregister event , that resolves #4

--- a/addons/amxmodx/configs/plugins-canvas.ini
+++ b/addons/amxmodx/configs/plugins-canvas.ini
@@ -4,3 +4,4 @@ canvas-init-progressive.amxx ; Basic initializer
 
 canvas-program-gradient.amxx; Gradient renderer
 canvas-program-tetris.amxx; Tetris game
+canvas-program-tictactoe.amxx; Tetris game
