+ add player touch events that resolve #2

--- a/addons/amxmodx/configs/plugins-canvas.ini
+++ b/addons/amxmodx/configs/plugins-canvas.ini
@@ -4,4 +4,5 @@ canvas-init-progressive.amxx ; Basic initializer
 
 canvas-program-gradient.amxx; Gradient renderer
 canvas-program-tetris.amxx; Tetris game
-canvas-program-tictactoe.amxx; Tetris game
+canvas-program-hover.amxx; Hover demo
+canvas-program-touch.amxx; Touch demo
